k8s/minio/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: default
spec:
  selector:
    app: minio
  type: ClusterIP
  ports:
    - name: minio
      protocol: TCP
      port: 9001
      targetPort: 9090
